# Cursor_MCP_for_Obsidian

./: .gitignore  LICENSE  README.md  README.ru.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
python/: README.md  obsidian-context-mcp.spec  pyinstaller_hidden_imports.py  pyinstaller_runtime_llama.py  pyproject.toml
python/scripts/: diag_embed.py
python/src/obsidian_context_mcp/: __init__.py  __main__.py
python/src/obsidian_context_mcp/cli/: commands.py  main.py
python/src/obsidian_context_mcp/core/: app_paths.py  backups.py  chunker.py  config_store.py  context_pack.py  diagnostics.py  editor.py  embeddings.py  errors.py  index_queue.py  index_serial.py  indexer.py  llm_local.py  llm_service.py  locks.py  logging.py  markdown_parser.py  ml_runtime.py  project.py  retrieval.py  scope_filter.py  scope_store.py  security.py  sqlite_store.py  vault.py  vault_config_store.py  vault_context.py  vault_paths.py  vector_store.py  watcher.py  work_context.py
python/src/obsidian_context_mcp/gui_backend/: handlers.py  rpc.py  schemas.py  server.py
python/src/obsidian_context_mcp/mcp_server/: prompts.py  resources.py  server.py  tool_definitions.py  tools.py
python/src/obsidian_context_mcp/shared/: constants.py  schemas.py  types.py
python/src/obsidian_context_mcp/vault_server/: __init__.py  admin_api.py  auth.py  http_app.py  index_queue.py  server.py  (+2 more)
python/tests/integration/: test_editor.py  test_indexing.py  test_watcher.py
python/tests/unit/: test_chunker.py  test_embeddings.py  test_markdown_parser.py  test_mcp_cli.py  test_scope_filter.py  test_security.py  test_tool_definitions.py  test_vault.py
(+71 files in other folders)
