[project]
name = "obsidian-context-mcp"
version = "0.2.2"
description = "Local MCP server for Cursor + Obsidian documentation context"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hotter_inc" }]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "watchdog>=4.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "markdown-it-py>=3.0",
    "python-frontmatter>=1.1.0",
    "platformdirs>=4.0",
    "rapidfuzz>=3.0",
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "llama-cpp-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
obsidian-context-mcp = "obsidian_context_mcp.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_context_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP042", "SIM108", "B904", "E501", "SIM102", "B005"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*", "watchdog.*", "frontmatter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
